--- a/Algorithm/Algorithm/Algorithm.vcxproj
+++ b/Algorithm/Algorithm/Algorithm.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClInclude Include="BTree.h" />
     <ClInclude Include="DynamicProgramming.h" />
+    <ClInclude Include="FibonaciHeap.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Sort.h" />
@@ -89,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="BTree.cpp" />
     <ClCompile Include="DynamicProgramming.cpp" />
+    <ClCompile Include="FibonaciHeap.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Queue.cpp" />
